add jwt return in header when creating new user
